--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ html {
     background: linear-gradient(#141e30, #243b55);
   }
   
-  .register-box {
+  .input-box {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -22,14 +22,14 @@ html {
     border-radius: 10px;
   }
   
-  .register-box h2 {
+  .input-box h2 {
     margin: 0 0 30px;
     padding: 0;
     color: #fff;
     text-align: center;
   }
   
-  .register-box .user-register-box input {
+  .input-box .input-fields input {
     width: 100%;
     padding: 10px 0;
     font-size: 16px;
@@ -62,6 +62,6 @@ html {
     background-color:#fff;
   }
   
-  #submit-button{
+  .submit-button{
     text-align:center;
   }
