--- a/Website/templates/register.html
+++ b/Website/templates/register.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Registration</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="../static/style.css">
     </head>
 
     <body>
@@ -36,7 +36,7 @@
             </form>
         </div>
 
-        <script src="main.js"></script>
+        <script src="../static/main.js"></script>
     </body>
 
 </html>
