--- a/Website/templates/register.html
+++ b/Website/templates/register.html
@@ -9,7 +9,7 @@
     <body>
       <div class="input-box">
         <h2>Register</h2>
-            <form>
+            <form method="POST">
                 <div class="input-fields">
                     <div>
                         <input type="text" id="uname" placeholder="Username" required>
