--- a/Website/templates/login.html
+++ b/Website/templates/login.html
@@ -6,17 +6,19 @@
         <link rel="stylesheet" href="../static/style.css">
     </head>
 
+    <!-- Login Form -->
+
     <body>
       <div class="input-box">
         <h2>Login</h2>
             <form method="POST">
                 <div class="input-fields">
                     <div>
-                        <input type="text" id="uname" placeholder="Username" required>
+                        <input type="text" id="uname" name="username" placeholder="Username" required>
                     </div>
 
                     <div> 
-                        <input type="Password" id="password" placeholder="Password" required>
+                        <input type="Password" id="password" name="password" placeholder="Password" required>
                     </div>
                 </div>
 
