--- a/Website/templates/register.html
+++ b/Website/templates/register.html
@@ -6,37 +6,66 @@
         <link rel="stylesheet" href="../static/style.css">
     </head>
 
+    <!-- Python code to implement alert messages -->
+
+    {% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+        {% for category, message in messages %}
+            {% if category == 'error' %}
+                <div class="alert alert-danger" role="alert">
+                    {{message}}
+                    <button type="button" class="close">X</button>
+                </div>
+
+                {% else %}
+
+                <div class="alert alert-success" role="alert">
+                    {{message}}
+                    <button type="button" class="close">X</button>
+                </div>
+            {% endif %}
+        {% endfor %}
+    {% endif %}
+    {% endwith %}
+
+    <script src="../static/main.js"></script>
+
     <body>
       <div class="input-box">
         <h2>Register</h2>
             <form method="POST">
                 <div class="input-fields">
                     <div>
-                        <input type="text" id="uname" placeholder="Username" required>
+                        <input type="text" id="uname" name="username" placeholder="Username">
                     </div>
 
                     <br>
 
                     <div>
-                        <input type="email" id="email" placeholder="Email" required>
+                        <input type="email" id="email" name="email" placeholder="Email">
                     </div>
 
                     <br>
 
                     <div> 
-                        <input type="Password" id="password" placeholder="Password" required>
+                        <input type="password" id="password1" name="password1" placeholder="Password">
+                    </div>
+
+                    <br>
+
+                    <div>
+                        <input type="password" id="password2" name="password2" placeholder="Re-enter Password">
                     </div>
                 </div>
 
                 <br>
 
                 <div class="submit-button">
-                    <input type="submit">
+                    <input type="submit" value="Submit">
                 </div>
             </form>
         </div>
 
-        <script src="../static/main.js"></script>
     </body>
 
 </html>
