--- a/Website/templates/register.html
+++ b/Website/templates/register.html
@@ -30,6 +30,8 @@
 
     <script src="../static/main.js"></script>
 
+    <!-- Register Form -->
+
     <body>
       <div class="input-box">
         <h2>Register</h2>
