--- a/Website/templates/login.html
+++ b/Website/templates/login.html
@@ -6,6 +6,27 @@
         <link rel="stylesheet" href="../static/style.css">
     </head>
 
+    <!-- Python code to implement alert messages -->
+    {% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+    {% for category, message in messages %}
+        {% if category == 'error' %}
+        <div class="alert alert-danger" role="alert">
+            {{ message }}
+            <button type="button" class="close">×</button>
+        </div>
+        {% elif category == 'success' %}
+        <div class="alert alert-success" role="alert">
+            {{ message }}
+            <button type="button" class="close">×</button>
+        </div>
+        {% endif %}
+    {% endfor %}
+    {% endif %}
+    {% endwith %}
+
+    <script src="../static/main.js"></script>
+
     <!-- Login Form -->
 
     <body>
