Add Logout Button

--- a/Website/static/style.css
+++ b/Website/static/style.css
@@ -1,4 +1,25 @@
-  /* Styling for the main form */
+/* index.html */
+
+h1{
+  color: white;
+}
+
+.logout-button{
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  padding: 10px 20px;
+  background-color: #f1f1f2db; 
+  color: black; 
+  text-decoration: none;
+  border-radius: 5px;
+}
+
+.logout-button:hover {
+  background-color: #c12e2e;
+}
+
+/* Styling for the main form */
 
 html {
     height: 100%;
