--- a/Website/templates/index.html
+++ b/Website/templates/index.html
@@ -27,12 +27,10 @@
 
     <script src="../static/main.js"></script>
 
-    <!-- Nav Bar-->
-    <a href="login.html" class="logout-button">Logout</a>    
-
-
     <body>
-        <h1>Welcome!</h1>
-    </body>
 
+        <a href="/logout" class="log-button">Logout</a>
+        
+        <h1>Welcome!</h1>
+    </body>    
 </html>
