--- a/Website/templates/register.html
+++ b/Website/templates/register.html
@@ -65,6 +65,13 @@
                 <div class="submit-button">
                     <input type="submit" value="Submit">
                 </div>
+
+                <br>
+
+                <div class="account-type">
+                    <p>Dont have an account?</p>
+                    <a href="/login" class="account">Register</a>    
+                </div>
             </form>
         </div>
 
