--- a/Website/templates/index.html
+++ b/Website/templates/index.html
@@ -29,8 +29,13 @@
 
     <body>
 
-        <a href="/logout" class="log-button">Logout</a>
-        
-        <h1>Welcome!</h1>
+        <div class="home-message">
+            
+            <h1>Welcome!</h1>
+
+            <a href="/logout" class="log-button">Logout</a>
+
+        </div>
+
     </body>    
 </html>
